--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "google-maps-react": "^2.0.2",
+    "nodemailer": "^6.4.2",
     "react": "^16.12.0",
     "react-bulma-components": "^3.1.3",
     "react-dom": "^16.12.0",
