--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,25 +1,14 @@
-image: node:10.15.1 # change to match your node version
-
-cache:
-  paths:
-    - node_modules/
-
-before_script:
-  - npm install
-
-test:
-  stage: test
-  script:
-    - CI=true npm test
+image: node:10.15.1 # can be upgraded, depending on your node version used
 
 pages:
   stage: deploy
   script:
-    - CI=true npm run build
-    - rm -rf public
-    - mv build public
+  - npm install
+  - npm run build
+  - rm -rf public
+  - mv build public
   artifacts:
     paths:
-      - public # GitLab pages serve from a 'public' directory
+    - public # mandatory, other folder won't work
   only:
-    - master # run on master branch
+  - master # or dev, the branch you want to publish
